feat: adds publish api, swagger docs, .gitignore
